--- a/templates/author/show.html.twig
+++ b/templates/author/show.html.twig
@@ -15,28 +15,28 @@
             <div class="grid 2/3">
                 <h1 class="no-margin">{{ author.getName() }}</h1>
                 <p>
-                    {% if author.getRole() %}
+                    {%- if author.getRole() -%}
                         <strong>{{ author.getRole() }}</strong>
-                        {% if author.getDescription() %}
+                        {%- if author.getDescription() -%}
                             , {{ author.getDescription() }}
-                        {% endif %}
-                    {% endif %}
+                        {%- endif -%}
+                    {%- endif -%}
                 </p>
 
-                {% if postResult.getTotal() %}
+                {%- if postResult.getTotal() -%}
                     <p class="no-margin text--shout">
                         <strong>
-                            {{ tr('blog_post_count_author', postResult.getTotal()) }}
+                            {{- tr('blog_post_count_author', postResult.getTotal()) -}}
                         </strong>
                     </p>
-                {% endif %}
+                {%- endif -%}
             </div>
         </div>
     </div>
     <div class="component">
         <h2>{{ tr('header_posts') }}</h2>
         {% if postResult.getDomainModels() is empty %}
-            <p>{{  tr('no_results') }}</p>
+            <p>{{ tr('no_results') }}</p>
         {% else %}
 
         {#$keysForComments = array();#}
