Move JS to DOM bottom

--- a/src/Ds/Post/ContentBlock/ClipsBlock/clips_block.html.twig
+++ b/src/Ds/Post/ContentBlock/ClipsBlock/clips_block.html.twig
@@ -13,8 +13,4 @@
     {%- endif -%}
 </div>
 
-<script>
-    require(['smp'], function(SMP) {
-        new SMP({{ clips_block.getPlayer()|raw }});
-    });
-</script>
+{{- add_smp(clips_block.getPlayer()) -}}
