Address PR comments

--- a/src/Ds/Post/ContentBlock/SocialBlock/social_block.html.twig
+++ b/src/Ds/Post/ContentBlock/SocialBlock/social_block.html.twig
@@ -9,11 +9,11 @@
 </div>
 
 {%- set snippet -%}
-    require(['jquery-1.9', 'third-party'], function($, ThirdParty) {
-        var embed = new ThirdParty({
-            container : $('#{{ social_block.getContainerId() }}'),
-            url       : {{ social_block.getLink()| json_encode(constant('JSON_UNESCAPED_SLASHES'))|raw }}
-        });
+    require(['jquery-1.9', 'third-party'], function($, ThirdParty) { {#--#}
+        var embed = new ThirdParty({ {#--#}
+            container : $('#{{ social_block.getContainerId() }}'), {#--#}
+            url : {{ social_block.getLink()| json_encode(constant('JSON_UNESCAPED_SLASHES'))|raw }} {#--#}
+        }); {#--#}
     });
 {%- endset -%}
 {{- add_script_snippet(snippet) -}}
