--- a/src/Ds/Molecule/DatePicker/date_picker.html.twig
+++ b/src/Ds/Molecule/DatePicker/date_picker.html.twig
@@ -51,4 +51,4 @@
 {%- set snippet -%}
     require(['bbc-datepicker']);
 {%- endset -%}
-{{- add_script_snippet(snippet) -}}
+{{- add_script_snippet_in_footer(snippet) -}}
