--- a/templates/author/show.html.twig
+++ b/templates/author/show.html.twig
@@ -2,6 +2,25 @@
 
 {% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }} - {{ author.getName() }}{% endblock %}
 
+{% block social_tags %}
+    <meta property="og:title" content="{{ block('title') }}">
+    <meta property="og:url" content="{{ url('author_show', {blogId: blog.getId(), guid: author.getGuid()}) }}" />
+{% endblock %}
+
+{% block social_image_tags %}
+    {%- if author.getImage() -%}
+        <meta property="og:image" content="{{ author.getImage().getUrl(1200,675) }}" />
+    {%- else -%}
+        {{ parent() }}
+    {%- endif -%}
+{% endblock %}
+
+{% block social_description %}
+    {%- if author.getRole() -%}
+        <meta property="og:description" content="{{ author.getRole() }}{% if author.getDescription() %}, {{ author.getDescription() }}{% endif %}"/>
+    {%- endif -%}
+{% endblock %}
+
 {% block content %}
     <div class="islet br-box-subtle component text--right">
         <a data-istats-link-location="blogs_author_page_see_all_authors"
