--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -87,7 +87,7 @@
     </div>
 
     <div class="component component--lined br-keyline">
-        <article itemprop="blogPost">
+        <article itemscope itemtype="http://schema.org/blogPost">
             <div class="component component--lined br-keyline">
                 <h1 itemprop="name">{{ post.getTitle() }}</h1>
 
