--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -13,7 +13,7 @@
     </div>
 
     <div class="component">
-        <h2>{{ tr('header_posts') }} ({{ postResults.total }})</h2>
+        <h2>{{ tr('header_posts') }} ({{ postResults.getTotal() }})</h2>
         {% if postResults.getDomainModels() is empty %}
             <p>{{ tr('no_results') }}</p>
         {% else %}
