--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -5,6 +5,14 @@
 {% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }} - {{ post.getTitle() }}{% endblock %}
 
 {% block inline_head %}
+
+    {# SCHEMA #}
+    {% set schema_data = {
+        '@context': 'http://schema.org',
+        '@type': 'BlogPosting',
+        'headline': post.getTitle() } %}
+
+
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary">
 
@@ -59,6 +67,8 @@
     {{ parent() }}
 {% endblock %}
 
+{% block schema %} itemscope itemtype="http://schema.org/BlogPosting"{% endblock %}
+
 {%- block content -%}
     <div class="islet br-box-subtle component text--right">
         <ul class="list-unstyled list--piped">
@@ -87,11 +97,11 @@
     </div>
 
     <div class="component component--lined br-keyline">
-        <article itemscope itemtype="http://schema.org/blogPost">
+        <article>
             <div class="component component--lined br-keyline">
-                <h1 itemprop="name">{{ post.getTitle() }}</h1>
+                <h1 itemprop="name headline">{{ post.getTitle() }}</h1>
 
-                <p class="text--subtle milli" itemprop="datePublished"><time datetime="{{ post.getPublishedDate()|date(constant('DATE_ATOM')) }}">
+                <p class="text--subtle milli" itemprop="datePublished dateModified"><time datetime="{{ post.getPublishedDate()|date(constant('DATE_ATOM')) }}">
                     {{ post.getPublishedDate()|date('l d F Y, H:i') }}
                 </time></p>
 
@@ -154,13 +164,13 @@
         </div>
         <div class="grid 2/3@bpw2 2/3@bpe">
             <h4 class="delta no-margin">
-                <a data-istats-link-location="{{ istatsLocation }}" itemprop="url"
+                <a data-istats-link-location="{{ istatsLocation }}"
                    href="{{ path('post', {blogId: blogId, guid: post.getGuid() }) }}">
                     <span itemprop="name">{{ post.getTitle() }}</span>
                 </a>
             </h4>
             {%- if post.getPublishedDate() -%}
-                <p class="text--subtle milli" itemprop="datePublished">
+                <p class="text--subtle milli">
                     <time datetime="{{ post.getPublishedDate() | date('Y-m-d\TH:i:s') }}">{{ post.getPublishedDate() | date('l d F Y, H:i') }}</time>
                 </p>
             {%- endif -%}
