--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -6,12 +6,9 @@
 
 {% block inline_head %}
 
-    {# SCHEMA #}
-    {% set schema_data = {
-        '@context': 'http://schema.org',
-        '@type': 'BlogPosting',
-        'headline': post.getTitle() } %}
-
+    <script type="application/ld+json">
+        {{- post_schema_data(post, url('post', {blogId: blog.getId(), guid: post.getGuid()}))|raw -}}
+    </script>
 
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary">
@@ -27,20 +24,17 @@
     <meta property="og:site_name" content="{{ blog.getName() }}" />
 
     {# POST #}
-    <meta itemprop="name" content="{{ post.getTitle() }}">
     <meta name="twitter:title" content="{{ post.getTitle() }}">
     <meta property="og:title" content="{{ post.getTitle() }}" />
     <meta property="article:published_time" content="{{ post.getPublishedDate() | date(constant('DATE_W3C')) }}" />
     <meta property="og:url" content="{{ url('post', {blogId: blog.getId(), guid: post.getGuid()}) }}" />
 
     {%- if post.getShortSynopsis() -%}
-        <meta itemprop="description" content="{{ post.getShortSynopsis() }}">
         <meta name="twitter:description" content="{{ post.getShortSynopsis() }}">
         <meta property="og:description" content="{{ post.getShortSynopsis() }}" />
     {%- endif -%}
 
     {%- if post.getImage() -%}
-        <meta itemprop="image" content="{{ post.getImage().getUrl(1200,675) }}">
         <meta property="og:image" content="{{ post.getImage().getUrl(1200,675) }}" />
     {%- endif -%}
 
@@ -66,8 +60,6 @@
 
     {{ parent() }}
 {% endblock %}
-
-{% block schema %} itemscope itemtype="http://schema.org/BlogPosting"{% endblock %}
 
 {%- block content -%}
     <div class="islet br-box-subtle component text--right">
@@ -99,9 +91,9 @@
     <div class="component component--lined br-keyline">
         <article>
             <div class="component component--lined br-keyline">
-                <h1 itemprop="name headline">{{ post.getTitle() }}</h1>
+                <h1>{{ post.getTitle() }}</h1>
 
-                <p class="text--subtle milli" itemprop="datePublished dateModified"><time datetime="{{ post.getPublishedDate()|date(constant('DATE_ATOM')) }}">
+                <p class="text--subtle milli"><time datetime="{{ post.getPublishedDate()|date(constant('DATE_ATOM')) }}">
                     {{ post.getPublishedDate()|date('l d F Y, H:i') }}
                 </time></p>
 
@@ -166,7 +158,7 @@
             <h4 class="delta no-margin">
                 <a data-istats-link-location="{{ istatsLocation }}"
                    href="{{ path('post', {blogId: blogId, guid: post.getGuid() }) }}">
-                    <span itemprop="name">{{ post.getTitle() }}</span>
+                    {{ post.getTitle() }}
                 </a>
             </h4>
             {%- if post.getPublishedDate() -%}
