--- a/src/Ds/Author/AuthorSummary/author_summary.html.twig
+++ b/src/Ds/Author/AuthorSummary/author_summary.html.twig
@@ -1,10 +1,10 @@
-<a itemprop="url" rel="author" href="{{ path('author_show', {blogId: author_summary.getBlogId(), guid: author_summary.getAuthor().getGuid()}) }}" data-istats-link-location="blogs_global_author">
+<a rel="author" href="{{ path('author_show', {blogId: author_summary.getBlogId(), guid: author_summary.getAuthor().getGuid()}) }}" data-istats-link-location="blogs_global_author">
     <div class="grid-wrapper">
         <div class="grid 1/3 1/1@bpw">
             {{- ds('image', author_summary.getAuthor().getImage(), 196, {770: 1/3, 1008: '196px'}) -}}
         </div>
         <div class="grid 2/3 1/1@bpw">
-            <h{{ author_summary.getOption('h_tag') }} class="gamma no-margin" itemprop="name">
+            <h{{ author_summary.getOption('h_tag') }} class="gamma no-margin">
                 {{ author_summary.getAuthor().getName() }}
             </h{{ author_summary.getOption('h_tag') }}>
             {% if author_summary.getAuthor().getRole() %}
