Blogs-1339 Semantic Markup (#93)

--- a/src/Ds/Post/Author/author.html.twig
+++ b/src/Ds/Post/Author/author.html.twig
@@ -7,7 +7,7 @@
         {% endif %}
 
         <div class="media__body">
-            <p class="no-margin {{- author.getOption('is_slimline') ? '' : ' delta' -}}" itemprop="author">
+            <p class="no-margin {{- author.getOption('is_slimline') ? '' : ' delta' -}}" >
                 {{- author.getName() -}}
 
                 {%- if author.getRole() -%}
