--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }} - {{ tr('page_title_author_all') }}{% endblock %}
 
 {% block social_tags %}
-    <meta property="og:title" content="{{ block('title') }}">
+    {{ parent() }}
     <meta property="og:url" content="{{ url('author_index', {blogId: blog.getId()}) }}" />
 {% endblock %}
 
