--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }} - {{ tr('header_tag_ind') }}: {{ tag.getName() }}{% endblock %}
 
 {% block social_tags %}
-    <meta property="og:title" content="{{ block('title') }}">
+    {{ parent() }}
     <meta property="og:url" content="{{ url('tag_show', {blogId: blog.getId(), tagId: tag.getId()}) }}" />
 {% endblock %}
 
