Index post count result with TagId

--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -23,9 +23,9 @@
                             <h2 class="delta pull--left no-margin">
                                 {{- tag.getName() -}}
                             </h2>
-                            {% if not tagPostCounts[loop.index0] is empty %}
+                            {% if not tagPostCounts[tag.getId()] is empty %}
                                 <p class="pull--right no-margin text--shout deemphasize br-page-text-ontext">
-                                    {{- tr('post', tagPostCounts[loop.index0]) -}}
+                                    {{- tr('post', tagPostCounts[tag.getId()]) -}}
                                 </p>
                             {% endif %}
                         </a>
