--- a/src/Ds/Core/Module/_loader.scss
+++ b/src/Ds/Core/Module/_loader.scss
@@ -1,43 +1,4 @@
-.loader {
-    font-size: 10px;
-    margin: 50px auto;
-    text-indent: -9999em;
-    width: 11em;
-    height: 11em;
-    border-radius: 50%;
-    background: #d6d6d6;
-    background: linear-gradient(to right, #d6d6d6 10%, rgba(214, 214, 214, 0) 42%);
-    position: relative;
-    animation: load3 1.4s infinite linear;
-    transform: translateZ(0);
-}
-
-.loader::before {
-    width: 50%;
-    height: 50%;
-    background: #d6d6d6;
-    border-radius: 100% 0 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
-}
-
-.loader::after {
-    background: #ffffff;
-    width: 75%;
-    height: 75%;
-    border-radius: 50%;
-    content: '';
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-
-@keyframes load3 {
+@keyframes SPINNER {
     0% {
         transform: rotate(0deg);
     }
@@ -47,6 +8,19 @@
     }
 }
 
-.loader-hidden {
-    display: none;
+.blogs-loading-spinner {
+    content: ' ';
+    display: block;
+    margin: 50px auto;
+    border-style: solid;
+    border-width: 0.5em;
+    border-left-color: transparent !important;
+    border-radius: 100%;
+    height: 5em;
+    width: 5em;
+    animation: SPINNER 0.75s infinite linear;
+}
+
+.blogs-loading-spinner .blogs-loading-fallback {
+    visibility: hidden;
 }
