--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,6 +49,7 @@
                     'smp': "{{ asset_js('smp.js') }}",
                     'third-party': "{{ asset_js('third-party.js') }}",
                     'bbc-datepicker': "{{ asset_js('bbc-datepicker.js') }}",
+                    'lazyload': "{{ asset_js('lazyload.js') }}",
                     'bump-3' : '//emp.bbci.co.uk/emp/bump-3/bump-3'
                 },
                 "priority": ['jquery-1.9'],
