Add error fallback string

--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -23,6 +23,10 @@
                     <div class="component comments-section" id="comments">
                         {{ comments.getBody()|raw }}
                     </div>
+                {%- else -%}
+                    <div class="component">
+                        <p>{{ tr('error_comments') }}</p>
+                    </div>
                 {%- endif -%}
             </div>
         </div>
