Add 404 and 500 error pages
* Add images folder to gulp build
* Fix jump link locations

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,7 +69,7 @@
 {{ orb.getBodyfirst()|raw }}
 {{ branding.getBodyFirst()|raw }}
 
-<div class="{% block page_classes %}text-base b-g-p blogs-page{% endblock %}" role="main">
+<div class="{% block page_classes %}text-base b-g-p blogs-page{% endblock %}" id="blogs-content" role="main">
     {% block body %}{% endblock %}
 </div>
 {{ gelicons_source() }}
