Fix responsive images in IE11 with a better polyfill and some duct tape

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,6 +50,7 @@
                     'third-party': "{{ asset_js('third-party.js') }}",
                     'bbc-datepicker': "{{ asset_js('bbc-datepicker.js') }}",
                     'lazyload': "{{ asset_js('lazyload.js') }}",
+                    'picturefill': "{{ asset_js('picturefill.js') }}",
                     'bump-3' : '//emp.bbci.co.uk/emp/bump-3/bump-3'
                 },
                 "priority": ['jquery-1.9'],
