--- a/src/Ds/SidebarModule/blog_tags.html.twig
+++ b/src/Ds/SidebarModule/blog_tags.html.twig
@@ -1,4 +1,4 @@
-<div class="sidebox component br-box-subtle">
+<div data-sidebar="tags" class="sidebox component br-box-subtle">
     <h2 class="island--squashed br-box-highlight no-margin">{{ tr('header_tag_list') }}</h2>
     <div class="island">
         <div class="component">
