--- a/src/Ds/SidebarModule/about.html.twig
+++ b/src/Ds/SidebarModule/about.html.twig
@@ -1,4 +1,4 @@
-<div class="sidebox component br-box-subtle">
+<div data-sidebar="about" class="sidebox component br-box-subtle">
     <h2 class="island--squashed br-box-highlight no-margin">{{ tr('module_about_header') }}</h2>
     <div class="grid-wrapper">
         {% if about.shouldShowImage() %}
