--- a/src/Ds/SidebarModule/freetext.html.twig
+++ b/src/Ds/SidebarModule/freetext.html.twig
@@ -1,4 +1,4 @@
-<div class="sidebox component br-box-subtle">
+<div data-sidebar="freetext" class="sidebox component br-box-subtle">
     <h2 class="island--squashed br-box-highlight no-margin">{{ freetext.getTitle() }}</h2>
     <div class="island">
         {% if freetext.hasImage() %}
