--- a/src/Ds/SidebarModule/links.html.twig
+++ b/src/Ds/SidebarModule/links.html.twig
@@ -1,4 +1,4 @@
-<div class="sidebox component br-box-subtle">
+<div data-sidebar="links" class="sidebox component br-box-subtle">
     <h2 class="island--squashed br-box-highlight no-margin">{{ links.getTitle() }}</h2>
     <div class="island">
         <ul class="list-spaced list-unstyled">
