--- a/src/Ds/SidebarModule/updates.html.twig
+++ b/src/Ds/SidebarModule/updates.html.twig
@@ -1,4 +1,4 @@
-<div class="sidebox component br-box-subtle">
+<div data-sidebar="updates" class="sidebox component br-box-subtle">
     <h2 class="island--squashed br-box-highlight no-margin">{{ tr('module_updates_header') }}</h2>
     <div class="island">
         <p>{{ tr('module_updates_content') }}</p>
