--- a/templates/post/by_date.html.twig
+++ b/templates/post/by_date.html.twig
@@ -25,7 +25,7 @@
         {%- if posts -%}
             <ol class="list-unstyled list-lined">
                 {%- for post in posts -%}
-                <li class="br-keyline">
+                <li data-section-type="blogs-post" class="br-keyline">
                     {{- ds('postSummary', blog, post, {'show_image': true, 'show_author': false, 'h_tag': 3}) -}}
                 </li>
                 {%- endfor -%}
