--- a/templates/author/show.html.twig
+++ b/templates/author/show.html.twig
@@ -26,7 +26,7 @@
         <a data-istats-link-location="blogs_author_page_see_all_authors"
            href="{{ path('author_index', {blogId: blog.getId()}) }}">{{ tr('link_see_all_authors') }}</a>
     </div>
-    <div class="component component--lined br-keyline">
+    <div data-section="author" class="component component--lined br-keyline">
         <div class="grid-wrapper">
             <div class="grid 1/3">
                 {{ ds('image', author.getImage(), 160, {}) }}
@@ -62,7 +62,7 @@
         <ol class="list-unstyled list-lined">
             {% for post in postResult.getDomainModels() %}
                 {#$keysForComments[] = $post->getForumId($this->blog);#}
-                <li class="br-keyline">
+                <li data-section="post-{{ loop.index0 }}" class="br-keyline">
                     {{ ds('postSummary', blog, post, {'h_tag': 3, 'show_author': false}) }}
                 </li>
             {% endfor %}
