--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -37,11 +37,11 @@
                     {% for author in authors %}
                         {% set authorResults = authorPostResults[''~author.getFileId()] %}
                         <li class="br-keyline">
-                            <div class="grid-wrapper">
-                                <div class="grid 1/3@bpw">
+                            <div data-section="author-item-{{ loop.index0 }}" class="grid-wrapper">
+                                <div data-section="author-summary" class="grid 1/3@bpw">
                                     {{ ds('authorSummary', author, blog.getId(), authorResults.getTotal()) }}
                                 </div>
-                                <div class="grid 2/3@bpw">
+                                <div data-section="post-details" class="grid 2/3@bpw">
                                     {% if authorResults.getTotal() > 0 %}
                                         {{ ds('postSummary', blog, authorResults.getDomainModels()[0], {'h_tag': 3, 'show_image': false, 'show_author': false}) }}
                                         {#$keysForComments[] = $post->getForumId($this->blog);#}
