--- a/src/Ds/Post/PostSummary/post_summary.html.twig
+++ b/src/Ds/Post/PostSummary/post_summary.html.twig
@@ -16,7 +16,7 @@
     {% if post_summary.shouldShowAuthor() %}
         {{ ds('postAuthor', post_summary.getPost().getAuthor(), post_summary.getBlogId(), post_summary.getOption('author_options')) }}
     {% endif %}
-    <div class="media islet--vertical">
+    <div data-section="post-content" class="media islet--vertical">
         {% if post_summary.shouldShowImage() %}
             <a
                 {% if post_summary.isFeaturedPost() %}
