--- a/src/Ds/Post/PostSummary/post_summary.html.twig
+++ b/src/Ds/Post/PostSummary/post_summary.html.twig
@@ -16,7 +16,7 @@
     {% if post_summary.shouldShowAuthor() %}
         {{ ds('postAuthor', post_summary.getPost().getAuthor(), post_summary.getBlogId(), post_summary.getOption('author_options')) }}
     {% endif %}
-    <div class="media islet--vertical">
+    <div data-section="post-content" class="media islet--vertical">
         {% if post_summary.shouldShowImage() %}
             <a
                 {% if post_summary.isFeaturedPost() %}
@@ -36,6 +36,7 @@
                     {% if post_summary.isFeaturedPost() %}
                         data-istats-link-location="blogs_featured_post"
                     {% endif %}
+                    data-link="read-more"
                     href="{{ path('post', {blogId: post_summary.getBlogId(), guid: post_summary.getPost().getGuid() }) }}">{{ tr('link_read_more') }}</a>
             </p>
         </div>
