--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -24,7 +24,7 @@
         {% else %}
             <ol class="list-unstyled list-lined">
                 {% for post in postResults.getDomainModels() %}
-                    <li data-content="post" class="br-keyline">
+                    <li data-section="post" class="br-keyline">
                         {{ ds('postSummary', blog, post, {'h_tag': 3}) }}
                     </li>
                 {% endfor %}
