Added another post data attribute

--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -90,7 +90,7 @@
         </ul>
     </div>
 
-    <div class="component component--lined br-keyline">
+    <div data-section="post" class="component component--lined br-keyline">
         <article>
             <div class="component component--lined br-keyline">
                 <h1>{{ post.getTitle() }}</h1>
