--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -135,7 +135,7 @@
     </div>
 
     {%- if prevPost or nextPost -%}
-        <div>
+        <div data-content="more-posts">
             <h2>{{ tr('header_more_posts') }}</h2>
             {%- if prevPost -%}
                 {{ postShow.morePosts(blog.getId(), prevPost, 'link_previous', 'blogs_post_bottom_previous') }}
