--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
 
     <script>document.documentElement.className += ' has-js';</script>
     <script>
-        // Check that service workers are registered
+        // Check that service workers are supported by the browser
         if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
             window.addEventListener('load', () => {
