--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
         if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('{{ asset_js('sw.js.js') }}');
+                navigator.serviceWorker.register('/blogs/sw.js');
             });
         }
     </script>
