--- a/src/Ds/Core/Objects/_third-party.scss
+++ b/src/Ds/Core/Objects/_third-party.scss
@@ -11,7 +11,6 @@
 .third-party--slideshare,
 .third-party--viddler,
 .third-party--youtube,
-.third-party--instagram,
 .third-party--vimeo,
 .third-party--vine {
     .third-party__embed {
@@ -29,15 +28,15 @@
         border: 0;
     }
 }
-
-// set aspect ratios
-.third-party--instagram {
-    max-width: 618px; // instagram doesn't support wider
-
-    .third-party__embed {
-        padding-bottom: 122%;
-    }
-}
+//
+//// set aspect ratios
+//.third-party--instagram {
+//    max-width: 618px; // instagram doesn't support wider
+//
+//    .third-party__embed {
+//        padding-bottom: 122%;
+//    }
+//}
 
 @media (max-height: 760px) {
     .third-party--instagram {
