--- a/src/Ds/Core/Gel/Objects/_hidden.scss
+++ b/src/Ds/Core/Gel/Objects/_hidden.scss
@@ -28,3 +28,14 @@
         @include gel-hidden-setup('\\@#{$name}');
     }
 }
+
+.skip-to-content-destination {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+}
