--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -20,7 +20,7 @@
                 {%- for tag in tagResult.getDomainModels() -%}
                     <li class="br-keyline cf">
                         <a data-istats-link-location="blogs_global_tag" href="{{ path('tag_show', {blogId: blog.getId(), tagId: tag.getId()}) }}">
-                            <h2 class="delta pull--left no-margin">
+                            <h2 class="delta pull--left no-margin" tabindex="0">
                                 {{- tag.getName() -}}
                             </h2>
                             {% if not tagPostCounts[tag.getId()] is empty %}
