Undo the removal of iStats

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,6 +64,10 @@
                     }
                 }
             });
+
+            window.bbcBlogs = {
+                "counterName" : "{{ istats_counter_name }}"
+            }
     </script>
 </head>
 <body>
