--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block social_description %}
+    <meta property="og:description" content="BBC Blogs" />
+{% endblock %}
+
 {% import _self as home %}
 
 {% block body %}
